Feature: add unit tests for services